--- a/venvapifideliza/Procfile
+++ b/venvapifideliza/Procfile
@@ -1,1 +1,1 @@
-web: uvicorn main:app --reload --port 80 --host https://apifid.herokuapp.com/
+web: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
